--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,16 @@
     <string name="navigation_bottom_rates">Rates</string>
     <string name="navigation_bottom_chat">Chat</string>
 
+    <string name="chat_edittext_message_hint">Type here a message...</string>
+
+    <string name="info_label_messages">Total messages</string>
+    <string name="info_no_name">Name is not available</string>
+
+    <string name="options_menu_log_out">Log out</string>
+
+    <string name="dialog_title">Rate the App!</string>
+    <string name="dialog_edit_text_hint">Leave your feedback</string>
+    <string name="dialog_ok">Rate</string>
+    <string name="dialog_cancel">Cancel</string>
+
 </resources>
